--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UFT-8">
         <title>HTMLのサンプル</title>
+        <link rel="stylesheet" type="text/css"   href="web.css">
     </head>
     <body>
         <p>これは簡単なHTMLのサンプルです</p>
+        <p>試しにもう一段落試してみよう。</p>
     </body>
 </html>
