--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" type="text/css"   href="web.css">
     </head>
     <body>
+        <h1>WELLCOME!</h1>
         <p>これは簡単なHTMLのサンプルです</p>
         <p>試しにもう一段落試してみよう。</p>
+        <img src="iniadcollab.png" alt="[チーム開発のイメージ画像]"
     </body>
 </html>
